--- a/static/css/base.css
+++ b/static/css/base.css
@@ -44,29 +44,12 @@
 
 html{
     font-family: "Tiempos", serif;
+    scroll-behavior: smooth;
 }
 
 body {
-    line-height: 1.6;
     color: #2c2c2c;
     background-color: #f4f4f4;
-}
-
-.top-nav {
-    background-color: #5e2a8c; 
-    color: #ffffff;
-    text-align: center;
-}
-
-.top-nav h1 {
-    font-size: 2.5rem;
-    margin: 0;
-}
-
-nav {
-    background-color: #ffffff;
-    border-top: 3px solid #5e2a8c;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 main {
@@ -92,15 +75,40 @@ footer {
     color: #ffffff;
     text-align: center;
     padding: 15px;
-    position: fixed;
     width: 100%;
     bottom: 0;
 }
 
+.top-nav {
+    align-items: center;
+    justify-content: space-between;
+    background-color: #5e2a8c;
+    color: #ffffff;
+    padding: 10px 20px;
+    width: 100%;
+}
+
+.top-nav img {
+    width: 100%;
+    height: auto;
+    max-height: 300px;
+    object-fit: cover;
+}
+
 .nav-links {
     display: flex;
-    justify-content: center;
     gap: 20px;
-    padding: 10px 0;
     list-style: none;
+    justify-content: center;
+}
+
+
+a {
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+a:hover {
+    text-decoration: underline;
 }
