--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Amherst College Student{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
+    {% block extra_css %}{% endblock %}
 </head>
 <body>
 
@@ -13,6 +14,14 @@
         <img src=" {{ url_for('static', filename='images/2022_1101_Fall-Scenics_129.jpg') }}">
         <nav class="nav-link-bar">
             <ul class="nav-links">
+                <li class="username-menu">
+                    <div class="username-menu-toggle">
+                        Hello, {{ username }} ▼
+                    </div>
+                    <ul class="username-dropdown">
+                        <li><a href="{{ url_for('signout') }}">Sign Out</a></li>
+                    </ul>
+                </li>
                 <li><a href="{{ url_for('home') }}">Home</a></li>
                 <li><a href="{{ url_for('dining') }}">Dining</a></li>
                 <li><a href="{{ url_for('calender') }}">Calender</a></li>
@@ -30,5 +39,6 @@
     <footer>
         <p>Thoughts on the site? Go to this <a href="">link</a></p>
     </footer>
+    <script src="{{ url_for('static', filename='js/base.js') }}"></script>
 </body>
 </html>
