--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,8 @@
                 </li>
                 <li><a href="{{ url_for('home') }}">Home</a></li>
                 <li><a href="{{ url_for('dining') }}">Dining</a></li>
-                <li><a href="{{ url_for('calender') }}">Calender</a></li>
-                <li><a href="{{ url_for('quizes') }}">Quizes</a></li>
+                <li><a href="{{ url_for('calendar') }}">Calender</a></li>
+                <li><a href="{{ url_for('quizzes') }}">Quizzes</a></li>
                 <li><a href="{{ url_for('about') }}">About</a></li>
             </ul>
         </nav>
@@ -40,5 +40,6 @@
         <p>Thoughts on the site? Go to this <a href="">link</a></p>
     </footer>
     <script src="{{ url_for('static', filename='js/base.js') }}"></script>
+    {% block extra_js %}{% endblock %}
 </body>
 </html>
