--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -36,7 +36,13 @@
                             <div class="day-number">{{ day }}</div>
                             {% for event in events %}
                                 {% if event.date.day == day and event.date.month == current_month %}
-                                    <div class="event">{{ event.title }}</div>
+                                    <div class="event"
+                                        data-title="{{ event.title }}"
+                                        data-description="{{ event.description or 'No description provided.' }}"
+                                        data-time="{{ event.date.strftime('%I:%M %p') }}"
+                                        onclick="showEventModal(this)">
+                                        {{ event.title }}
+                                    </div>
                                 {% endif %}
                             {% endfor %}
                         </td>
@@ -63,6 +69,17 @@
             <button type="submit">Add Event</button>
         </form>
     </div>
+
+    <div id="eventModal" class="modal hidden">
+        <div class="modal-content">
+            <span class="close-btn" onclick="closeModal()">&times;</span>
+            <h3 id="modal-title"></h3>
+            <p><strong>Time:</strong> <span id="modal-time"></span></p>
+            <p><strong>Description:</strong></p>
+            <p id="modal-description"></p>
+        </div>
+    </div>
+
 </div>
 {% endblock %}
 
