--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -62,10 +62,8 @@
             <input type="text" name="description">
             <label>Date:</label>
             <input type="date" name="date" required>
-            <label>Hour:</label>
-            <input type="number" name="hour" min="0" max="23" required>
-            <label>Minute:</label>
-            <input type="number" name="minute" min="0" max="59" required>
+            <label>Time:</label>
+            <input type="time" name="time" step="60" required>
             <button type="submit">Add Event</button>
         </form>
     </div>
